bug fix links icon clipping when width not small

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -13,7 +13,6 @@ html[data-scheme="dark"] .image-dark {
 
 .article-list--compact article .article-image {
     height: var(--image-size);
-    overflow: hidden;
 }
 
 .article-list--compact.links article {
